# rpcjni

./: build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
shotsync/: build.gradle
shotsync/src/androidTest/java/com/senter/shotsync/: TestShotSync.kt
shotsync/src/main/: AndroidManifest.xml
shotsync/src/main/cpp/: CMakeLists.txt  RpcImpl.cpp  RpcImpl.h  ShotSync.cpp  jnijavacpp.cpp
shotsync/src/main/cpp/libstc-rpc/: CMakeLists.txt  stc_rpc.c
shotsync/src/main/cpp/libstc-rpc/include/: stc_log.h  stc_rpc.h
shotsync/src/main/java/com/senter/shotsync/: NativeLibraryConfig.java  ShotSync.java
shotsync/src/test/java/com/senter/shotsync/: ExampleUnitTest.java
